Fix z-index layout, fix menu closing after selection, fix footer, add favicon

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -152,3 +152,13 @@ a:hover {
   transition: all 1s ease-in-out;
   transform: scale(1.05);
 }
+
+footer > p {
+  opacity: 0;
+  transition: all 1s ease-in-out;
+}
+
+footer:hover > p {
+  cursor: pointer;
+  opacity: 1;
+}
